# PlaywrightUI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  app.py  config.py  devops.py  keyvault.py  postprocess.py  recorder.py  theme.py
src/assets/: icon.icns
